--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
@@ -14,8 +14,6 @@
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
-
-
 
     <LinearLayout
         android:id="@+id/linearHeader"
@@ -51,6 +49,7 @@
             android:src="@drawable/ic_search">
 
         </ImageView>
+
     </LinearLayout>
 
     <TextView
@@ -65,6 +64,7 @@
         android:textSize="@dimen/_17ssp"
         app:layout_constraintTop_toBottomOf="@id/linearHeader"
         app:layout_constraintStart_toStartOf="@id/linearHeader">
+
     </TextView>
 
     <androidx.cardview.widget.CardView
@@ -85,7 +85,8 @@
             android:id="@+id/imageRandomMeal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/accent">
+            android:background="@color/accent"
+            android:scaleType="centerCrop">
         </ImageView>
     </androidx.cardview.widget.CardView>
 
