--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -19,7 +19,8 @@
             android:layout_height="match_parent"
             app:contentScrim="@color/accent"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="Meal name">
+            app:title="Meal name"
+            app:expandedTitleTextColor="@color/deepSkyBlue">
 
             <ImageView
                 android:id="@+id/mealDetailImageView"
@@ -42,6 +43,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addToFavoritesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_favorites"
@@ -63,6 +65,7 @@
            android:layout_height="match_parent">
 
            <LinearLayout
+               android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
@@ -74,6 +77,7 @@
                app:layout_constraintEnd_toEndOf="parent">
 
                <TextView
+                   android:id="@+id/categoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
@@ -87,6 +91,7 @@
                </TextView>
 
                <TextView
+                   android:id="@+id/areaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
@@ -99,9 +104,62 @@
 
                </TextView>
 
+
            </LinearLayout>
+
+
+           <TextView
+               android:id="@+id/instructionTextView"
+               android:text="- instructions"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_5sdp"
+               android:textStyle="bold"
+               android:textColor="@color/black"
+               android:fontFamily="@font/poppins_medium"
+               android:textSize="@dimen/_15ssp">
+
+           </TextView>
+
+           <TextView
+               android:id="@+id/instructionsDescriptionTextView"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               app:layout_constraintStart_toStartOf="@+id/instructionTextView"
+               app:layout_constraintTop_toBottomOf="@+id/instructionTextView"
+               android:layout_marginTop="@dimen/_2sdp"
+               android:textColor="@color/black"
+
+               >
+
+           </TextView>
 
        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <ImageView
+        android:id="@+id/imageYouTube"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/ic_youtube"
+        android:layout_marginBottom="@dimen/_10sdp">
+
+    </ImageView>
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom"
+        android:visibility="gone">
+
+
+    </com.google.android.material.progressindicator.LinearProgressIndicator>
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
