--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="yellow">#FFFF00</color>
     <color name="cerulean">#0492C2</color>
     <color name="deepSkyBlue">#00BFFF</color>
+    <color name="gray">#E6E6E6</color>
 </resources>
