--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/categoriesFragment"
     android:layout_width="match_parent"
@@ -7,9 +7,11 @@
     tools:context=".fragments.CategoriesFragment">
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello fragment categories" />
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recyclerViewCategories"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-</FrameLayout>
+   </androidx.recyclerview.widget.RecyclerView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
